fixed more map alignment issues

--- a/server/static/css/default.css
+++ b/server/static/css/default.css
@@ -200,8 +200,8 @@ p{
 }
 
 .map {
-  margin-bottom: 20px;
-  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-top: 3px;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -300,10 +300,10 @@ h1{
   color: white;
 }
 .map {
-  margin-bottom: 40%;
+  margin-bottom: 5%;
   margin-top: 5%;
   width: 100%;
-  height: 100%;
+  height: 50%;
 }
 .fields{
   width: 70%;
